k8s/apps/actualbudget/base/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: actualbudget
  namespace: actualbudget
  labels:
    app.kubernetes.io/name: actualbudget
    app.kubernetes.io/component: server
spec:
  serviceName: actualbudget
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: actualbudget
      app.kubernetes.io/component: server
  template:
    metadata:
      labels:
        app.kubernetes.io/name: actualbudget
        app.kubernetes.io/component: server
    spec:
      containers:
        - name: actualbudget
          image: docker.io/actualbudget/actual-server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5006
              protocol: TCP
          volumeMounts:
            - name: actualbudget-data
              mountPath: /data
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
          # readinessProbe:
            # exec:
            #   command:
            #     - node
            #     - scripts/health-check.js
            # initialDelaySeconds: 20
            # periodSeconds: 30
            # timeoutSeconds: 10
            # failureThreshold: 3
          # livenessProbe:
            # exec:
            #   command:
            #     - node
            #     - scripts/health-check.js
            initialDelaySeconds: 60
            periodSeconds: 60
            timeoutSeconds: 10
            failureThreshold: 3
      volumes:
        - name: actualbudget-data
          persistentVolumeClaim:
            claimName: actualbudget-data
